# pyalimony

./: .gitignore  README.md  config.yaml  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
pyalimony/: __init__.py  config.py  main.py  reports.py  struct.py  utils.py
tests/: test_pyalimony.py
