[tool.poetry]
name = "pyalimony"
version = "2021.0.1"
description = "Рассчет алиментов"
authors = ["Michael Savin <jtprogru@gmail.com>"]
license = "WTFPL"
repository = "https://github.com/jtprogru/pyalimony"
homepage = "https://github.com/jtprogru/pyalimony"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
coverage = "^5.5"
flake8 = "^3.9.0"
flake8-colors = "^0.1.9"
pytest = "^6.2.3"
mccabe = "^0.6.1"
mypy = "^0.812"
pylint = "^2.7.4"
tox = "^3.23.0"
tox-gh-actions = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
